[gd_scene load_steps=17 format=3 uid="uid://dev70nkbyuydv"]

[ext_resource type="Texture2D" uid="uid://cqhoidm6a2ami" path="res://images/rails.png" id="1_lo3q4"]
[ext_resource type="Script" uid="uid://cvormi1od74aa" path="res://scenes/game_view/train.gd" id="2_wgsvc"]
[ext_resource type="Texture2D" uid="uid://3mbyv70qcwdd" path="res://images/smoke-particle-small.png" id="3_ogqkn"]

[sub_resource type="Animation" id="Animation_qcyb2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_fwktr"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_sy3o3"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(20, 20)]
}

[sub_resource type="Animation" id="Animation_re58s"]
resource_name = "rainbow"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0.67451, 0.196078, 0.196078, 1), Color(0.87451, 0.443137, 0.14902, 1), Color(0.984314, 0.823529, 0.211765, 1), Color(0.415686, 0.745098, 0.196078, 1), Color(0.356863, 0.431373, 0.882353, 1), Color(0.462745, 0.258824, 0.541176, 1), Color(0.67451, 0.196078, 0.196078, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bdd4j"]
_data = {
&"RESET": SubResource("Animation_qcyb2"),
&"fade_in": SubResource("Animation_fwktr"),
&"fade_out": SubResource("Animation_sy3o3"),
&"rainbow": SubResource("Animation_re58s")
}

[sub_resource type="Curve" id="Curve_1cflw"]
_limits = [1.0, 10.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 3.98359), 5.7967, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_i1d45"]
colors = PackedColorArray(0.66, 0.66, 0.66, 0.705882, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_pfwk8"]
colors = PackedColorArray(0.82, 0.82, 0.82, 1, 0.941176, 0.941176, 0.941176, 1)

[sub_resource type="Curve" id="Curve_rei6s"]
_limits = [0.0, 4.0, 0.0, 1.0]
_data = [Vector2(0, 0.700102), 0.0, 0.0, 0, 0, Vector2(0.490716, 4), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_fodbn"]
colors = PackedColorArray(0.926387, 0.800204, 0.437897, 1, 1, 1, 1, 1)

[sub_resource type="Curve" id="Curve_dmukj"]
_limits = [1.0, 4.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 4), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_17jyq"]
colors = PackedColorArray(1, 1, 1, 0.403922, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_6whlh"]
colors = PackedColorArray(0.24, 0.24, 0.24, 0.509804, 0.76, 0.76, 0.76, 0.509804)

[node name="Train" type="Node2D"]
script = ExtResource("2_wgsvc")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_lo3q4")
region_enabled = true
region_rect = Rect2(0, 320, 64, 64)

[node name="FadePlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_bdd4j")
}

[node name="SteamParticles" type="CPUParticles2D" parent="."]
z_index = 1
z_as_relative = false
position = Vector2(11, -1)
amount = 400
texture = ExtResource("3_ogqkn")
lifetime = 2.0
explosiveness = 0.1
randomness = 0.4
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 8.0
spread = 15.0
gravity = Vector2(0, 0)
scale_amount_min = 0.8
scale_amount_max = 1.1
scale_amount_curve = SubResource("Curve_1cflw")
color = Color(1, 1, 1, 0.290196)
color_ramp = SubResource("Gradient_i1d45")
color_initial_ramp = SubResource("Gradient_pfwk8")

[node name="SparkParticles" type="CPUParticles2D" parent="."]
texture_filter = 6
position = Vector2(7, 0)
emitting = false
lifetime = 0.1
one_shot = true
explosiveness = 1.0
randomness = 0.5
lifetime_randomness = 1.0
emission_shape = 3
emission_rect_extents = Vector2(1, 4)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 20.0
scale_amount_curve = SubResource("Curve_rei6s")
color_initial_ramp = SubResource("Gradient_fodbn")

[node name="Timer" type="Timer" parent="SparkParticles"]
autostart = true

[node name="ExhaustParticles" type="CPUParticles2D" parent="."]
position = Vector2(-29, 2)
amount = 50
texture = ExtResource("3_ogqkn")
lifetime = 0.3
randomness = 0.5
lifetime_randomness = 0.5
direction = Vector2(1, -25)
spread = 15.0
gravity = Vector2(0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 10.0
scale_amount_min = 0.3
scale_amount_max = 0.4
scale_amount_curve = SubResource("Curve_dmukj")
color_ramp = SubResource("Gradient_17jyq")
color_initial_ramp = SubResource("Gradient_6whlh")

[connection signal="animation_finished" from="FadePlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="SparkParticles/Timer" to="." method="_on_spark_timer_timeout"]
